# audit_automation

./: .env.example  .gitignore  .pre-commit-config.yaml  create_org_structure.py  db.sqlite3  db2.sqlite3  manage.py  pyproject.toml  security_pentest.py  verify_privileges.py  verify_roles.py
audit_automation/: asgi.py  settings.py  urls.py  wsgi.py
interface/: forms.py  models.py  validators.py  views.py
interface/migrations/: 0001_initial.py  0002_alter_redflags_options_remove_redflags_manuals_and_more.py  0003_alter_redflags_options_alter_redflags_created_at_and_more.py  0004_redflags_manual.py  0005_uploadedfile.py  0006_delete_uploadedfile.py  0007_remove_redflags_description_redflags_category.py  0008_alter_redflags_category.py  0009_alter_redflags_category.py  0010_alter_redflags_manual.py  0011_automation_delete_redflags.py  0012_alter_automation_category.py  0013_tool.py
static/css/: 403.css  RF_create.css  automation.css  forms.css  homepage.css  login.css  nav.css  pass_change.css  tables.css
templates/: Nav.html
templates/User_management/: 403.html  create_privilege.html  create_user.html  delete_user.html  privilege_list.html  update_user.html  user_list.html
templates/login/: automation.html  home.html  learn.html  login.html  password_change.html  password_change_done.html  red_flag.html
templates/pages/: automation.html  automation_info.html  automation_report.html  create_automation.html  create_red_flag.html  create_tool.html  edit_red_flag.html  home.html  learn.html  red_flag.html  red_flag_info.html  red_flag_report.html  (+2 more)
user_management/: admin.py  forms.py  models.py  views.py
(+8 files in other folders)
